--- a/index.html
+++ b/index.html
@@ -29,11 +29,20 @@
     </nav>
 
     <div class="container">
-      <div class="row mt-3">
-        <div class="col">
+      <div class="row mt-3 justify-content-center">
+        <div class="col-md-8 text-center">
           <h1>Search Movie</h1>
+          
+          <div class="input-group mb-3">
+            <input type="text" class="form-control" placeholder="Movie title . . ." id="search-input">
+            <div class="input-group-append">
+              <button class="btn btn-dark" type="button" id="search-button">Search</button>
+            </div>
+          </div>
         </div>
       </div>
+
+      <hr>
 
       <div class="row" id="movie-list">
       </div>
